Upgrade to PySide 6

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ build/
 *.pyc
 pyexiftoolgui.egg-info/
 
-# IDE files?
+# Development
 scripts/.pyexiftoolgui/
 *.wp?
+*.sw*
+.DS_Store
+.venv
 
 # Debian files
 debian/.debhelper/
